Fixed overflow

--- a/frontend/helptrain/src/components/Landing/landing.scss
+++ b/frontend/helptrain/src/components/Landing/landing.scss
@@ -13,6 +13,7 @@
 }
 .landingPage {
   height: 100%;
+  position: relative;
 
   p {
     font-size: 20px;
